syntax = "proto3";
package pb_gen;

option go_package = "UNS/pb_gen/events";

import "objects.proto";
import "config.proto";
import "google/protobuf/wrappers.proto";

// RM prefix means an event initiated by Resource Manager

// 同步事件：RM -> Service
// 资源管理器将自己注册到调度服务上的事件。
message RMRegisterResourceManagerEvent {
  RMConfiguration configuration = 1;
}

// 异步事件：RM -> Scheduler
// 资源管理器更新allocation的事件。
message RMUpdateAllocationsEvent {
  repeated JobAllocation updatedJobAllocations = 1;
  repeated string finishedJobIDs = 2;
  repeated string unallocatedJobIDs = 3;
  repeated JobExecutionHistory jobExecutionHistories = 4;

  // 模拟器专用：更新时间
  google.protobuf.Int64Value currentNanoTime = 255;
}

// 异步事件：RM -> Scheduler
message RMUpdateJobsEvent {
  repeated Job newJobs = 1;
  repeated string removedJobIDs = 2;

  // 模拟器专用：更新时间
  google.protobuf.Int64Value currentNanoTime = 255;
}

// 异步事件：RM -> Scheduler
// 模拟器专用：更新时间
message RMUpdateTimeEvent {
  int64 currentNanoTime = 255;
}

// SS prefix means an event initiated by Scheduler

// 异步事件：Scheduler -> RM
// 调度器向资源管理器提议新的任务分配
message SSUpdateAllocationsEvent {
  repeated JobAllocation newJobAllocations = 1;

  // 模拟器专用：下次调度的时间
  int64 nextScheduleTime = 255;
}
